Fix dock window mask alignment: use --lexicon-seal-w fallback for window center math

--- a/assets/toc.css
+++ b/assets/toc.css
@@ -392,7 +392,7 @@ html.toc-closing{
   /* Window geometry aligned to the left dock socket (ToC). */
   --dock-window-w:var(--dock-socket-d);
   --dock-window-h:var(--dock-socket-h);
-  --dock-window-center-x:calc(50% - (var(--toc-tab-width) / 2 + (var(--seal-size, 66px) / 2) + var(--toc-tab-gap)) - var(--dock-socket-spread, 0px));
+  --dock-window-center-x:calc(50% - (var(--toc-tab-width) / 2 + (var(--lexicon-seal-w, var(--seal-size, 66px)) / 2) + var(--toc-tab-gap)) - var(--dock-socket-spread, 0px));
   --dock-window-center-y:calc(50% + var(--dock-socket-raise) + 1px + var(--dock-socket-y-nudge, 0px));
   --dock-window-left-default:calc(var(--dock-window-center-x) - (var(--dock-window-w) / 2));
   --dock-window-top-default:calc(var(--dock-window-center-y) - (var(--dock-window-h) / 2));
@@ -406,7 +406,7 @@ html.reliquary-closing{
   /* Window geometry aligned to the right dock socket (Mirror). */
   --dock-window-w:var(--dock-socket-d);
   --dock-window-h:var(--dock-socket-h);
-  --dock-window-center-x:calc(50% + (var(--toc-tab-width) / 2 + (var(--seal-size, 66px) / 2) + var(--toc-tab-gap)) + var(--dock-socket-spread, 0px));
+  --dock-window-center-x:calc(50% + (var(--toc-tab-width) / 2 + (var(--lexicon-seal-w, var(--seal-size, 66px)) / 2) + var(--toc-tab-gap)) + var(--dock-socket-spread, 0px));
   --dock-window-center-y:calc(50% + var(--dock-socket-raise) + 1px + var(--dock-socket-y-nudge, 0px));
   --dock-window-left-default:calc(var(--dock-window-center-x) - (var(--dock-window-w) / 2));
   --dock-window-top-default:calc(var(--dock-window-center-y) - (var(--dock-window-h) / 2));
